--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^14.2.0",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.8.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
